Added Java8 Compatibility